tests/toylang/neg/001143_mutation.toylang
program a = { if var a then sleep; } .
